Question Mark HelpText In forms
Self explanatory, as requested by Quintin and documented in #60

--- a/django_project/templates/treasure/add_file_resource.html
+++ b/django_project/templates/treasure/add_file_resource.html
@@ -1,6 +1,7 @@
 {% extends 'treasure/base.html' %}
 
 {% load static %}
+{% load render_help %}
 
 {% block title %}
     Upload
@@ -22,7 +23,7 @@
 
             {% for field in resource_form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}<br/>
+                {{field.label}}{% render_help_text field %}<br/>
                 {{ field }}<br/>
             {% endfor %}
             
@@ -32,7 +33,7 @@
 
             {% for field in file_form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}<br/>
+                {{field.label}}{% render_help_text field %}<br/>
                 {{ field }}<br/>
             {% endfor %}
 
