--- a/django_project/templates/treasure/edit_resource.html
+++ b/django_project/templates/treasure/edit_resource.html
@@ -1,6 +1,7 @@
 {% extends 'treasure/base.html' %}
 
 {% load static %}
+{% load render_help %}
 
 {% block title %}
     Edit Resource
@@ -22,9 +23,9 @@
 				    {% endfor %}
 
 				    {% for field in form.visible_fields %}
-				        {{ field.errors }}
-				        {{ field.help_text }}<br/>
-				        {{ field }}<br/>
+		                {{ field.errors }}
+		                {{field.label}}{% render_help_text field %}<br/>
+		                {{ field }}<br/>
 				    {% endfor %}
 				
 				
