--- a/django_project/templates/treasure/register.html
+++ b/django_project/templates/treasure/register.html
@@ -14,7 +14,7 @@
         <h2>Thank you for registering</h2>
         <h3>Please <a href="/treasure/login/" tabindex='1'>Login</a></h3>
     {% else %}
-        <h2>Add a Teacher</h2>
+        <h2>Teacher Registration</h2>
         <br/>
         <div class="container">
             <form class="span6" id="register_teacher_form" method="post" action="/treasure/register/" enctype="multipart/form-data">
