--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -66,7 +66,7 @@
                            <li><a href="/treasure/packs">Packs</a></li>
                            <li><a href="/treasure/tags">Tags</a></li>
                        {% endif %}
-                           <li><a href="/treasure/about">News</a></li>
+                           <li><a href="/treasure/about">About</a></li>
                        </ul>
                    </div>
                    <!--/.nav-collapse -->
@@ -105,7 +105,7 @@
 									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>
                   <li><a href="/treasure/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
 								{% endif %}			         
-                  <li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>About TReaSURe</span></a></li>              
+                  <li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>About</span></a></li>              
 							</ul>
 						</nav>
 
