--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -54,11 +54,13 @@
                 </ul>
                 <hr>
                 
-					{% if label %}
-                        <a class="btn btn-block btn-primary" href="/../treasure/resource/{{resource.id}}/download/"{% if files_resource %} download{% endif %}>{{label}}</a>
+					                
+                    {% if downloaded and not rating_exists %}<a class="btn btn-block btn-primary" href="./rate/">Rate Resource</a>{% endif %}  
+                    {% if label %}
+                        <a class="btn btn-block btn-primary" href="/../treasure/resource/{{resource.id}}/download/">{% if downloaded %}Re-{% endif %}{{label}}</a>
 					{% endif %}
-                    <a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a>                 
-                    <a class="btn btn-block btn-success" href="/../treasure/resource/{{ resource.id}}/track">Track Resource</a>                
+                    <a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a>                    
+                    <a class="btn btn-block btn-success" href="./track/downloads" target="_blank">Track Resource</a>                
                     <a class="btn btn-block btn-info" href="/../treasure/resource/{{ resource.id }}/versions">View Versions</a>
                     {% if owned %}
                         <a class="btn btn-block btn-danger" href="/../treasure/resource/{{ resource.id }}/edit">Edit Resource</a>
@@ -97,36 +99,78 @@
        </div>
         
         <div class="hero-unit">
+        {% if feedback %}
+        
+            <h3>Feedback</h3>
+            <div class="table-responsive">
+                <table id="feedback" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Teacher</th>
+                            <th>Measure1</th>
+                            <th>Measure2</th>
+                            <th>Measure3</th>
+                            <th>Comment</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for feed in feedback %}
+                            <tr class="teacherLabel">
+                                <td>{{feed.teacher}}</td>
+                                <td>{{feed.measure1}}</td>
+                                <td>{{feed.measure2}}</td>
+                                <td>{{feed.measure3}}</td>
+                                <td>{{feed.comment}}</td>
+                            </tr>
+                        {% endfor %}
+                        {% if downloaded and not rating_exists %}
+                        <tr class="teacherLabel">
+                            <a href="./rate/"><td>Rate Resource</td></a>
+
+                        </tr>
+                        {% endif %}
+                    </tbody>
+                 </table>
+            </div>
+        </div>
+        {% else %}
+            <p>There is no feedback for resource {{resource_name}} yet. {% if downloaded and not rating_exists %}<a href="./rate/">Be the first!</a>{% elif not downloaded %}<a href="./rate/">Download Resource!</a>{% endif %}</p>
+        {% endif %}
+        </div>
+<!--  ORGANISE A DISCUSSION FEATURE      
+        <div class="hero-unit">
         {% if want2talk %}
- 		
+        
             <p>People willing to organise discussion about {{resource_name}}:</p>
-	        <div class="table-responsive">
-	            <table id="wanttotalk" class="table table-striped table-bordered" cellspacing="0" width="100%">
-	                <thead>
-	                    <tr>
-	                        <th>Teacher</th>
-	                        <th>Comment</th>
-	                    </tr>
-	                </thead>
-	                <tbody>
-	                    {% for record in want2talk %}
-	                        <tr class="teacherLabel">
-	                            <td>{{record.teacher}}</td>
-	                            <td>{{record.comment}}</td>
-	                        </tr>
-	                    {% endfor %}
+            <div class="table-responsive">
+                <table id="wanttotalk" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Teacher</th>
+                            <th>Comment</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for record in want2talk %}
+                            <tr class="teacherLabel">
+                                <td>{{record.teacher}}</td>
+                                <td>{{record.comment}}</td>
+                            </tr>
+                        {% endfor %}
                         <tr class="teacherLabel">
                             <td>+ADD SELF</td>
                             <td>-Pending Form to add self-</td>
                         </tr>
-	                </tbody>
-	             </table>
-	        </div>
+                    </tbody>
+                 </table>
+            </div>
         </div>
-		{% else %}
-		    <p>Nobody declared interest in organising a discussion about {{resource_name}} yet. <a href="">Be the first</a></p>
+        {% else %}
+            <p>Nobody declared interest in organising a discussion about {{resource_name}} yet. <a href="">Be the first</a></p>
         {% endif %}
         </div>
+-->
+
 
         <!-- todo: put issues here -->
         
