Registration Auto-Redirect
Auto redirecting to Login page after registration
#70

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <title>Treasure - {% block title %}{% endblock %}</title>
+        {% block head_block%}{% endblock%}
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/html5shiv.js' %}"></script><![endif]-->
