Adding a resource to a new pack is fixed #51
New packs now have an initial resource if the user chose to create a new
pack from that resource page.

Also removing the database from the repository.  We shold just keep
local copies to save on time.

--- a/django_project/templates/treasure/addtopack.html
+++ b/django_project/templates/treasure/addtopack.html
@@ -19,7 +19,7 @@
         </form>
         {% endfor %}
         
-        <div class="span12"><a class="btn btn-primary pull-left" href="/treasure/packs/new" tabindex='1'>New Pack</a></div>
+        <div class="span12"><a class="btn btn-primary pull-left" href="/treasure/packs/new/{{ resource_id }}" tabindex='1'>New Pack</a></div>
     </div>
 </div>
 {% endblock %}
