Add Usage links

--- a/django_project/templates/treasure/history.html
+++ b/django_project/templates/treasure/history.html
@@ -23,8 +23,6 @@
                         <th>Date and Time</th>
                         <th>Have used it?</th>
                         <th>Have rated it?</th>
-                        <th>lat</th>
-                        <th>long</th>
 
                     </tr>
                 </thead>
@@ -33,10 +31,8 @@
                         <tr class="studentLabel">
                             <td><a href="/treasure/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
 							<td>{{entry.datetime}}</td>
-                            <td>{% if entry.used %} Yes{% else %} No{% endif %}</td>
-                            <td>{% if entry.rated %} Yes{% else %} No{% endif %}</td>
-                            <td>{{entry.latitude}}</td>
-                            <td>{{entry.longitude}}</td>
+                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/treasure/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
+                            <td>{% if entry.rated %} Yes{% else %} No. (<a href="/treasure/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td>
                         </tr>
                     {% endfor %}
 
