--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -95,18 +95,17 @@
                         <nav id="nav">
 							<ul>
 								{% if user.is_authenticated %}
-									<li><a href="/treasure/#" id="home-link" class="skel-layers-ignoreHref"><span>Home</span></a></li>
-									<li><a href="/treasure/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
-                                    <li><a href="/treasure/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
+									<li><a href="/treasure/me/#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
+									<li><a href="/treasure/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
+                                    <li><a href="/treasureme//#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
 									<li><a href="/treasure/profile" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
 									<li><a href="/treasure/history" class="skel-layers-ignoreHref"><span>My History</span></a></li>
 									
 								{% else %}									
 									<li><a href="/treasure/login" class="skel-layers-ignoreHref"><span>Login</span></a></li>
 									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>
-                  <li><a href="/treasure/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
+                                    <li><a href="/treasure/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
 								{% endif %}			         
-                  <li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>About</span></a></li>              
 							</ul>
 						</nav>
 
