--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -31,144 +31,12 @@
 
 {% if user.is_authenticated %}
 
-<div id="myresources" class="hero-unit panel panel-default">
-	{% if MyResources %}
-    <div class="panel-heading clearfix">
-		<h4>My Resources</h4>
-    </div>
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Resource Name</th>
-                        <th>Summary</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for resource in MyResources %}                        
-                        <tr class="studentLabel">
-                            <td><a href="/treasure/resource/{{ resource.id }}">{{ resource.name }}</a></td>
-                            <td>{{ resource.summary }}</td>
-                        </tr>                        
-                    {% endfor %}
-
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
-	{% else %}
-	<p>You have uploaded no resources.</a>
-	{% endif %}
-    <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
-</div> <!-- close panel -->
-
-
-<div id="mypacks" class="hero-unit panel panel-default">
-	{% if MyPacks %}
-    <div class="panel-heading clearfix">
-		<h4>My Packs</h4>
-    </div>
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Pack Name</th>
-                        <th>Summary</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for pack in MyPacks %}                        
-                        <tr class="packlabel">
-                            <td><a href="/treasure/packs/{{ pack.id }}">{{ pack.name }}</a></td>
-                            <td>{{ pack.summary }}</td>
-                        </tr>                        
-                    {% endfor %}
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
-	{% else %}
-	<p>You have created no packs.</p>
-	{% endif %}
-    <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/packs/new">Create New Pack</a><br></div>
-</div> <!-- close panel -->
-
-
-<div id="myratings" class="hero-unit panel panel-default">
-{% if need2rate %}
-    <div class="panel-heading clearfix">
-		<h4>Downloaded Resources Pending Rating</h4>
-    </div>
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-	                        <th>Resource Name</th>
-	                        <th>Date and Time</th>
-                            <th>Have used it?</th>
-                            <th>Have rated it?</th>
-	                    </tr>
-	                </thead>
-	                <tbody>
-	                    {% for entry in need2rate %}
-	                        <tr class="studentLabel">
-	                            <td><a href="/treasure/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
-								<td>{{entry.datetime}}</td>
-                                <td>{% if entry.used %} Yes{% else %} No. (<a href="/treasure/resource/{{entry.resource.id }}/use/home"> Yes?</a>){% endif %}</td>
-                                <td>{% if entry.rated %} Yes{% else %} No. (<a href="/treasure/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td>
-                        </tr>
-                    {% endfor %}
-
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
-	{% else %}
-	<p>All downloaded resources have been rated. <a href="/treasure/explore/">Explore more</a>?</p>
-	{% endif %}
-</div> <!-- close panel -->
-
-
-{% if MyResources %}
-<div id="mytalk" class="hero-unit panel panel-default">
-{% if want2talk %}
-    <div class="panel-heading clearfix">
-		<h4>People Willing to talk about my Resources</h4>
-    </div>
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Resource Name</th>
-                        <th>Author</th>
-                        <th>summary</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for record in want2talk %}
-                        <tr class="studentLabel">
-                            <td><a href="/treasure/resource/{{ record.resource.id }}">{{record.resource.name}}</a></td>
-                            <td>{{record.teacher}}</td>
-                            <td>{{record.comment}}</td>
-                        </tr>
-                    {% endfor %}
-
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
-	{% else %}
-    <p>Nobody has declared interest in discussing your resources yet.</p>
-	{% endif %}
-</div> <!-- close panel -->
-{% endif %}
+<div class="span8 hero-unit">
+    <h2>new homepage goes here<h2>
+</div>
+<div class="span4 hero-unit">
+    <h3>FancySIdebar</h3>
+</div>
 
 
 {% else %}
