Making the sidebar slightly lighter.

--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -62,3 +62,8 @@ a.btn {
 .tab-content {
     overflow: visible !important;
 }
+
+/* making the header slightly lighter */
+#header {
+    background: #333
+}
