Adding ability to reset passwords

--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -22,6 +22,8 @@
         <br />
         <button class="btn btn-primary" type="submit" tabindex='1'>Sign in</button>
     </form>
+    
+    <a href="/treasure/password_reset/">Forgot your password?</a>
 
     </div>
 
