Password changes are now separate from profile changes

--- a/django_project/templates/treasure/profile.html
+++ b/django_project/templates/treasure/profile.html
@@ -16,7 +16,9 @@
 			<li>E-mail</li>
 			<li><input type="text" value="{{user_email}}" disabled="disabled"></li>
 			<li>Password</li>
-			<li><input type="text" value="************" disabled="disabled"></li>
+			<li><input type="text" value="************" disabled="disabled">
+			    <a href="/treasure/change_password/">Change your password?</a>
+			</li>
 			<li>First Name</li>
 			<li><input type="text" value="{{user_firstname}}" disabled="disabled"></li>
 			<li>Last Name</li>
