Adding a help page
No actual help though.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -98,12 +98,12 @@
 									<li><a href="/treasure/me/#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
 									<li><a href="/treasure/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
                                     <li><a href="/treasureme//#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
-									<li><a href="/treasure/profile" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
-									<li><a href="/treasure/history" class="skel-layers-ignoreHref"><span>My History</span></a></li>
-									
+									<li><a href="/treasure/profile/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
+									<li><a href="/treasure/history/" class="skel-layers-ignoreHref"><span>My History</span></a></li>
+									<li><a href="/treasure/help/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
 								{% else %}									
-									<li><a href="/treasure/login" class="skel-layers-ignoreHref"><span>Login</span></a></li>
-									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+									<li><a href="/treasure/login/" class="skel-layers-ignoreHref"><span>Login</span></a></li>
+									<li><a href="/treasure/register/" class="skel-layers-ignoreHref"><span>Register</span></a></li>
                                     <li><a href="/treasure/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
 								{% endif %}			         
 							</ul>
