Some simple bug fixes.
Fixing the url patterns and showing the summary instead of the description on the pack page.

--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -78,7 +78,7 @@
 		                    <tr>
 		                        <th>Resource Name</th>
 		                        <th>Author</th>
-		                        <th>Description</th>
+		                        <th>Summary</th>
 		                    </tr>
 		                </thead>
 		                <tbody>
@@ -86,7 +86,7 @@
 		                        <tr class="Label">
 		                            <td><a href="/treasure/resource/{{ resource.id }}">{{resource.name}}</a></td>
 		                            <td>{{resource.author}}</td>
-		                            <td>{{resource.description}}</td>
+		                            <td>{{resource.summary}}</td>
 		                        </tr>
 		                    {% endfor %}
 
