Fixing the speed issue.
The goelocation call to some place in london is what was making the site so slow.  I removed it as I don't know what is was for.  Also fixing the url again.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -97,7 +97,7 @@
 								{% if user.is_authenticated %}
 									<li><a href="/treasure/me/#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
 									<li><a href="/treasure/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
-                                    <li><a href="/treasureme/me/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
+                                    <li><a href="/treasure/me/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
 									<li><a href="/treasure/profile/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
 									<li><a href="/treasure/history/" class="skel-layers-ignoreHref"><span>My History</span></a></li>
 									<li><a href="/treasure/help/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
