--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -32,7 +32,7 @@
 {% if user.is_authenticated %}
 <div class="span12">
     <div class="span7 hero-unit">
-        <h2>TREASURE</h2>
+        <h1>TReaSURe</h1>
         <h4>Welcome to treasure, blah bla......</h4><br>
         <h5>Quick Links</h5>
         <ul>
@@ -68,7 +68,7 @@
     </div>
     
     <div class="span3 hero-unit">
-        <h3><emph>{{ num_resources }} Resources;<br>{{ num_packs }} Packs;<br>{{ num_users }} Users</emph></h3>
+        <h3><emph>{{ num_resources }} Resources;<br>{{ num_packs }} Packs;<br>{{ num_users }} Users.</emph></h3>
     </div>
 
     <div class="span4 hero-unit">
@@ -87,7 +87,10 @@
         <h2>Latest Ratings</h2>
         <ol>
             {% for rating in new_ratings %}
-                <li>{{ rating.teacher.user.username }} rated <a href="/treasure/resource/{{ rating.resource.id }}"><!--{{ rating.resource.name }}</a> {{ ratings.measure1 }}, {{ ratings.measure2 }}, {{ ratings.measure3 }}--></li>
+                <li>
+                    {{ rating.teacher.user.username }} rated <a href="/treasure/resource/{{ rating.resource.id }}">
+                    {{ rating.resource.name }}</a> {{ rating.measure1 }}, {{ rating.measure2 }}, {{ rating.measure3 }}
+                </li>
             {% endfor %}
         </ol>
     </div>
