Rate Materials & Contribution
#77 #76 and minor fixes
—Please note that School needs to be added in profile of users logged
in with Google in order to be able to rate.

--- a/django_project/templates/registration/password_reset_complete.html
+++ b/django_project/templates/registration/password_reset_complete.html
@@ -1,4 +1,5 @@
 {% extends "treasure/base.html" %}
+{% block head_block %}<meta http-equiv="refresh" content="2; url={{ login_url }}" />{% endblock %}
 
 {% block title %}
     Password Reset Complete
@@ -8,6 +9,6 @@
     <div class="hero-unit">
         <h2>Password Reset</h2>
         <p>Your password has been reset.</p>
-        <p><a href="{{ login_url }}">Log in</a></p>
+        <p>You are being redirected to the <a href="{{ login_url }}">Log in</a> page.</p>
     </div>
 {% endblock %}
