--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -99,7 +99,7 @@
 									<li><a href="/treasure/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
                                     <li><a href="/treasure/me/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
 									<li><a href="/treasure/profile/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
-									<li><a href="/treasure/history/" class="skel-layers-ignoreHref"><span>My History</span></a></li>
+									<li><a href="/treasure/contribution/" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
 									<li><a href="/treasure/help/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
 								{% else %}									
 									<li><a href="/treasure/login/" class="skel-layers-ignoreHref"><span>Login</span></a></li>
