--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -19,11 +19,10 @@
         Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" tabindex='1' autofocus='autofocus'/>
         <br />
         Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value="" size="50" tabindex='1'/>
-        <br />
+        <a href="/treasure/password_reset/" style="font-size: 0.7em">Forgot your password?</a>
+        <br/>
         <button class="btn btn-primary" type="submit" tabindex='1'>Sign in</button>
     </form>
-    
-    <a href="/treasure/password_reset/">Forgot your password?</a>
 
     </div>
 
