--- a/django_project/templates/treasure/edit_profile.html
+++ b/django_project/templates/treasure/edit_profile.html
@@ -6,6 +6,21 @@
 {% block title %}
     Edit Profile
 {% endblock %}
+{% block notification %}{% if soc %}<section id="top" class="one dark cover">
+	<div class="container">
+
+		<header>
+			<h2 class="alt">Welcome to TReaSURe, {{ user_teacher.firstname }}</a></h2>
+			<p>Add your school to complete your profile.</p>
+		</header>
+
+		<footer>
+			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
+		</footer>
+
+	</div>
+</section>{% endif %}{% endblock %}
+
 
 {% block body_block %}
 
